linear algebra practice

--- a/01_linear_algebra.ipynb
+++ b/01_linear_algebra.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np  # The swiss knife of the data scientist."
+    "import numpy as np"
    ]
   },
   {
